Use jdk11 primitives in test to allow backport to branch_9x (#13311)